add artist name and url link to home

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,5 +3,9 @@
 <ul>
   {{#each art}}
   <li>{{title}}</li>
+  <li>
+    <a href={{artist.url}}>
+    <em>{{artist.name}}</em></a>
+  </li>
   {{/each}}
 </ul>
