--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,10 +2,6 @@
 
 <ul>
   {{#each art}}
-  <li>{{title}}</li>
-  <li>
-    <a href={{artist.url}}>
-    <em>{{artist.name}}</em></a>
-  </li>
+  {{>artwork-summary}}
   {{/each}}
 </ul>
