--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,8 @@
-Hello, templates!
+<h1>{{title}}</h1>
+
+<ul>
+  {{#each art}}
+  <li>{{title}}</li>
+  <a href={{artist.url}}>{{artist.name}}</a>
+  {{/each}}
+</ul>
