links to image page from home pages

--- a/views/partials/artwork-summary.hbs
+++ b/views/partials/artwork-summary.hbs
@@ -1,4 +1,4 @@
- <li>{{title}}</li>
+ <li><a href="http://localhost:3000/artwork/{{id}}">{{title}}</a></li>
   <li>
     <a href={{artist.url}}>
     <em>{{artist.name}}</em></a>
