display artist name in gallery

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,5 +2,7 @@ Hello, templates
 <h1>{{title}}</h1>
   <ul>{{#each art}}
     <img src={{artwork}}>
+    <p>{{artist.name}}</p>
     {{/each}}
   </ul>
+
