--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,10 @@
+Hello, templates!
+
+
+
 <html>
     <head></head>
     <body>
-      <h1>Hello World!</h1>
+      <h1>{{title}} <br> this is a {{author}}</h1>
     </body>
 </html>
-
