--- a/views/partials/artwork-summary.hbs
+++ b/views/partials/artwork-summary.hbs
@@ -1,3 +1,3 @@
-<li>{{title}}, <a href={{artist.url}}>{{artist.name}}</a><br>
+<li><a href={{artwork}}>{{title}}</a>, <a href={{artist.url}}>{{artist.name}}</a><br>
 <a href={{license.url}}>{{license.name}}</a>
 </li>
