--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,7 @@
 Hello, templates
 <h1>{{title}}</h1>
   <ul>{{#each art}}
-    <img src={{artwork}}>
-    <p>{{artist.name}}</p>
+    {{> artwork}}
     {{/each}}
   </ul>
 
