MVP Tasks 4-5 completed

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 
-<h1>{{title}}</h1>
+{{> header}}
 
 <ul>
   {{#each art}}
@@ -7,3 +7,5 @@
 {{> artwork-summary}}
   {{/each}}
 </ul>
+
+{{> footer}}
