--- a/views/partials/artwork-summary.hbs
+++ b/views/partials/artwork-summary.hbs
@@ -1,3 +1,3 @@
   <li>{{this.title}}
-    <ul>{{this.artist.name}}, lin{{this.license.url}} </ul>
+    <ul>{{this.artist.name}}, <a href="{{this.license.url}}">licence</a> </ul>
   </li>
