--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,8 +5,8 @@
   <title>Document</title>
 </head>
 <body>
-   {{{header}}}
+   {{>header}}
   {{{body}}}
-   {{{footer}}}
+   {{>footer}}
 </body>
 </html>
