--- a/views/partials/artwork-summary.hbs
+++ b/views/partials/artwork-summary.hbs
@@ -1,1 +1,4 @@
-<li>Title: <a href="artworks/{{id}}">{{title}}</a> <div>Artist Name: {{artist.name}}</div> <div>License: {{license.name}}</div></li>
+<li>Title: <a href="artworks/{{id}}">{{title}}</a> 
+<div>Artist Name: {{artist.name}}</div> 
+<div>License: {{license.name}}</div>
+</li>
