--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,6 +5,7 @@ Hello, templates!
 <html>
     <head></head>
     <body>
-      <h1>{{title}} <br> this is a {{author}}</h1>
+      <h1>{{title}}</h1>
     </body>
+    <p>{{Art}}</p>
 </html>
