art details displayed on page

--- a/views/partials/comments.hbs
+++ b/views/partials/comments.hbs
@@ -1,5 +1,6 @@
-<ul>
-{{#each art}}
-<li>{{comments}}</li>
+<h3>Check out these comments!</h3>
+<ol>
+{{#each comments}}
+<li>"{{this}}" - anon</li>
 {{/each}}
-</ul>
+</ol>
