Home link works

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,8 +5,9 @@
   <title>Document</title>
 </head>
 <body>
+   {{>menu}}
    {{>header}}
-  {{{body}}}
+   {{{body}}}
    {{>footer}}
 </body>
 </html>
