--- a/views/partials/artwork-summary.hbs
+++ b/views/partials/artwork-summary.hbs
@@ -1,2 +1,2 @@
-  <a href="http://localhost:3000/artworks/{{id}}">{{title}}</a>
-  <a href={{artist.url}}>{{artist.name}}</a>
+  <a href="/artworks/{{id}}">{{title}}</a>
+  <a target="_blank" href={{artist.url}}>{{artist.name}}</a>
