--- a/views/partials/artwork-summary.hbs
+++ b/views/partials/artwork-summary.hbs
@@ -1,3 +1,5 @@
-<li><a href={{artwork}}>{{title}}</a>, <a href={{artist.url}}>{{artist.name}}</a><br>
-<a href={{license.url}}>{{license.name}}</a>
+<li>
+    <a href='/artworks/{{id}}'>{{title}}</a>, 
+    <a href={{artist.url}}>{{artist.name}}</a><br>
+    <a href={{license.url}}>{{license.name}}</a>
 </li>
