--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,1 +1,7 @@
+{{#if title}}
 <h1>{{title}}</h1>
+{{/if}}
+
+{{#unless title}}
+<h2>Sorry, no art today. Go take a walk or something.</h2>
+{{/unless}}
