If there is no title, remind the dev to add a title.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    {{> header}}
+    {{#if title}}
+        {{> header}}
+    {{/if}}
+    {{#unless title}}
+        <h1>Dear developer, you screwed up, put a title in!</h1>
+    {{/unless}}
     {{{body}}}
     {{> footer}}
 </body>
