--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,14 +1,12 @@
-Hello, templates!
-
-
-
 <html>
     <head></head>
     <body>
       <h1>{{title}}</h1>
     </body>
+    
     {{#each art }} 
     {{> artwork_summary}}
+    {{> header}}
       {{/each}}
 
     <p>{{params}}</p>
